# dbt-metadata-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  attribution.md  mypy.ini  pyproject.toml
.github/workflows/: cd-push-to-pypi.yaml
dbt_metadata_client/: client.py  dbt_metadata_api_schema.json  dbt_metadata_api_schema.py
