[tool.poetry]
name = "dbt-metadata-client"
version = "0.1.0"
description = "A simple python client for interacting with dbt's metadata API"
authors = ["Transform <hello@transformdata.io>"]
readme = "README.md"
packages = [{include = "dbt_metadata_client"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
sgqlc = "^16.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''